argocd/external-services/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ext-svc-plex
spec:
  type: ExternalName
  externalName: truenas.bowmans.site
  ports:
    - port: 32400
