argocd/external-services/plex/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ext-ingress-route-plex
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`plex.bowmans.site`)
      kind: Rule
      services:
      - name: ext-svc-plex
        port: 32400
  tls:
    secretName: ext-cert-plex
